--- a/client/index.htm
+++ b/client/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Game</title>
+    <title>EGJ5 Game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <link rel="stylesheet" type="text/css" href="css/fontface.css"/>
@@ -43,11 +43,6 @@
     <script type="text/javascript" src="js/utils/acceleratable.js"></script>
     <script type="text/javascript" src="js/utils/image_processing.js"></script>
     <script type="text/javascript" src="js/utils/integer_scaling.js"></script>
-    <script type="text/javascript" src="js/demos/demo_menu_scene.js"></script>
-    <script type="text/javascript" src="js/demos/demo_box2d_scene.js"></script>
-    <script type="text/javascript" src="js/demos/demo_particles_scene.js"></script>
-    <script type="text/javascript" src="js/demos/demo_sound_scene.js"></script>
-    <script type="text/javascript" src="js/demos/old_demo_scene.js"></script>
     <script type="text/javascript" src="js/resources.js"></script>
     <script type="text/javascript" src="js/custom_preloading.js"></script>
     <script type="text/javascript" src="js/tooltip.js"></script>
@@ -57,8 +52,10 @@
     <script type="text/javascript" src="js/pause_screen.js"></script>
     <script type="text/javascript" src="js/settings.js"></script>
     <script type="text/javascript" src="js/scenes.js"></script>
+    <script type="text/javascript" src="js/field.js"></script>
+    <script type="text/javascript" src="js/camera.js"></script>
+    <script type="text/javascript" src="js/surp.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/demos/demo.js"></script>
 </head>
 <body>
 <noscript><div id="noscript">Sorry, JavaScript is not enabled in your browser. Enable JavaScript to play the game.</div></noscript>
