--- a/client/index.htm
+++ b/client/index.htm
@@ -55,6 +55,8 @@
     <script type="text/javascript" src="js/field.js"></script>
     <script type="text/javascript" src="js/camera.js"></script>
     <script type="text/javascript" src="js/surp.js"></script>
+    <script type="text/javascript" src="js/websocket_manager.js"></script>
+    <script type="text/javascript" src="js/player.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
