--- a/client/client.html
+++ b/client/client.html
@@ -90,6 +90,12 @@
 						ctx.arc(x, y, 2, 0, 2 * Math.PI);
 						ctx.fill();
 					}
+					if (data.object === 'box') {
+						ctx.strokeStyle = 'rgb(160,0,0)';
+						ctx.beginPath();
+						ctx.rect(x-2, y-2, 4, 4);
+						ctx.stroke();
+					}
 					if (lastRenderTimestamp) {
 						// handle animations
 						var deltaTime = (timestamp - lastRenderTimestamp) / 1000.;
