Added violaines sprites, color background, moving surps name tags lag interpolation camera dynamic walk animation

--- a/client/index.htm
+++ b/client/index.htm
@@ -53,8 +53,10 @@
     <script type="text/javascript" src="js/settings.js"></script>
     <script type="text/javascript" src="js/scenes.js"></script>
     <script type="text/javascript" src="js/field.js"></script>
+    <script type="text/javascript" src="js/grass.js"></script>
     <script type="text/javascript" src="js/camera.js"></script>
     <script type="text/javascript" src="js/surp.js"></script>
+    <script type="text/javascript" src="js/surp_manager.js"></script>
     <script type="text/javascript" src="js/websocket_manager.js"></script>
     <script type="text/javascript" src="js/player.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
