Added holes aniamtion, render order

--- a/client/index.htm
+++ b/client/index.htm
@@ -49,7 +49,6 @@
     <script type="text/javascript" src="js/global_controls.js"></script>
     <script type="text/javascript" src="js/loading_scene.js"></script>
     <script type="text/javascript" src="js/ingame_scene.js"></script>
-    <script type="text/javascript" src="js/pause_screen.js"></script>
     <script type="text/javascript" src="js/settings.js"></script>
     <script type="text/javascript" src="js/scenes.js"></script>
     <script type="text/javascript" src="js/field.js"></script>
@@ -59,6 +58,7 @@
     <script type="text/javascript" src="js/surp_manager.js"></script>
     <script type="text/javascript" src="js/websocket_manager.js"></script>
     <script type="text/javascript" src="js/player.js"></script>
+    <script type="text/javascript" src="js/panel.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
