--- a/client/index.htm
+++ b/client/index.htm
@@ -56,6 +56,7 @@
     <script type="text/javascript" src="js/camera.js"></script>
     <script type="text/javascript" src="js/surp.js"></script>
     <script type="text/javascript" src="js/surp_manager.js"></script>
+    <script type="text/javascript" src="js/box_manager.js"></script>
     <script type="text/javascript" src="js/websocket_manager.js"></script>
     <script type="text/javascript" src="js/player.js"></script>
     <script type="text/javascript" src="js/panel.js"></script>
