--- a/client/index.htm
+++ b/client/index.htm
@@ -4,7 +4,9 @@
     <title>EGJ5 Game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One%7CGaegu" rel="stylesheet">    <script type="text/javascript" src="js/libs/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One%7CGaegu" rel="stylesheet">
+    <script type="text/javascript" src="js/libs/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/libs/box2d.min.js"></script>
     <script type="text/javascript" src="js/libs/soundmanager2.js"></script>
     <script type="text/javascript" src="js/libs/screenfull.min.js"></script>
