--- a/client/index.htm
+++ b/client/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>EGJ5 Game</title>
+    <title>Sir Prise Kawaii Adventure to Be the Ultimate Player of the Delicious Fruitball Game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
